WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268487
[WPE] Fix DRM initialization in nxp-imx6qp-sdb board
https://bugs.webkit.org/show_bug.cgi?id=268487
Summary
[WPE] Fix DRM initialization in nxp-imx6qp-sdb board
Pablo Saavedra
Reported
2024-01-31 11:24:07 PST
[WPE] Fix DRM initialization in nxp-imx6qp-sdb board
Attachments
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2024-01-31 11:43:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23608
EWS
Comment 2
2024-02-01 04:25:16 PST
Committed
273898@main
(5a6315f2de68): <
https://commits.webkit.org/273898@main
> Reviewed commits have been landed. Closing PR #23608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug