[WPE] Fix DRM initialization in nxp-imx6qp-sdb board https://bugs.webkit.org/show_bug.cgi?id=268487

Reviewed by Carlos Garcia Campos.

This patch is generic but fixes the DRM initialization for NXP imx6qp
Sabre Development boards:

* Removes the check for the valid connector in the chooseConnector().
  The encoder Id can be zero if the connector is not currently bound
  to an encoder or if the encoder+crtc is already used by another
  connector.

* Modifies the chooseCrtcForConnector() logic. We implement a more
  robust mechanism by checking the encoder->possible_crtcs in case of
  no active crtc was found.

Credits to Jani Hautakangas <jani@igalia.com>.

Related-To: https://github.com/Igalia/cog/pull/590
Related-To: https://github.com/WebKit/WebKit/pull/23654
Related-To: https://github.com/WebKit/WebKit/pull/23657

* Source/WebKit/WPEPlatform/wpe/drm/WPEDisplayDRM.cpp:
(chooseConnector):
(chooseCrtcForConnector):

Canonical link: https://commits.webkit.org/273898@main